Правки регистрации, роли из базы