@@ -7,16 +7,16 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 import ru.leadersofdigital.dobro.dtos.LoginDto;
 import ru.leadersofdigital.dobro.dtos.RegisterDto;
-import ru.leadersofdigital.dobro.dtos.TokenDto;
 import ru.leadersofdigital.dobro.error_handling.InvalidDataException;
 import ru.leadersofdigital.dobro.error_handling.ResourceNotFoundException;
-import ru.leadersofdigital.dobro.models.*;
+import ru.leadersofdigital.dobro.models.Profile;
+import ru.leadersofdigital.dobro.models.Role;
+import ru.leadersofdigital.dobro.models.Shelter;
+import ru.leadersofdigital.dobro.models.User;
 import ru.leadersofdigital.dobro.repositories.ProfileRepository;
 import ru.leadersofdigital.dobro.repositories.UserRepository;
 import ru.leadersofdigital.dobro.utils.JwtTokenUtil;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -35,7 +35,7 @@ public class AuthenticationService {
         User user = userRepository.findByEmail(dto.getEmail()).orElseThrow(() -> new ResourceNotFoundException("Email not found"));
 
         if (!cryptPasswordEncoder.matches(dto.getPassword(), user.getPassword())) {
-            throw new InvalidDataException(Arrays.asList("Invalid data password or email"));
+            throw new InvalidDataException(List.of("Invalid data password or email"));
         }
 
         return tokenUtil.generateToken(user);
@@ -50,10 +50,12 @@ public class AuthenticationService {
         user.setEmail(dto.getEmail());
         user.setUsername(dto.getUsername());
         user.setPassword(cryptPasswordEncoder.encode(dto.getPassword()));
-        user.setRoles(List.of(new Role(dto.getRole())));
 
         if (dto.getShelter() != null) {
             user.setShelter(new Shelter(dto.getShelter()));
+        }
+        if (dto.getRole() != null) {
+            user.setRoles(List.of(new Role(dto.getRole())));
         }
         user = userRepository.save(user);
         Profile profile = new Profile();
@@ -61,11 +63,4 @@ public class AuthenticationService {
         profileRepository.saveAndFlush(profile);
         return tokenUtil.generateToken(user);
     }
-
-
-
-
-
-
-
 }
